force-app/main/default/objects/Branch__c/fields/HOD_Name__c.field-meta.xml
<CustomField>
    <fullName>HOD_Name__c</fullName>
    <label>HOD Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>