force-app/main/default/objects/Branch__c/fields/HOD_Phone__c.field-meta.xml
<CustomField>
    <fullName>HOD_Phone__c</fullName>
    <label>HOD Phone</label>
    <type>Phone</type>
</CustomField>