force-app/main/default/objects/Branch__c/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <label>Number of Students</label>
    <summaryForeignKey>Student__c.Branch_Parent_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>