force-app/main/default/objects/Branch__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <label>Total Fees</label>
    <summarizedField>Student__c.Course_Fees__c</summarizedField>
    <summaryForeignKey>Student__c.Branch_Parent_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>