force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>HOD_Name__c</columns>
    <columns>HOD_Phone__c</columns>
    <columns>Number_of_Students__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>